{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 669,
  "lineage": "8c2d1588-970a-2304-c563-c471f338bae5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:942112512222:listener/app/restaurant-alb/e16234569991df9d/3cd2294eefd93fbe",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:942112512222:targetgroup/restaurant-tg/49079256f72c3ac4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:942112512222:listener/app/restaurant-alb/e16234569991df9d/3cd2294eefd93fbe",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:942112512222:loadbalancer/app/restaurant-alb/e16234569991df9d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.module.db_subnet_group.aws_db_subnet_group.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.azs",
            "module.alb.aws_security_group_rule.allow_port_80_ingress_for_http_to_https_redirect",
            "module.rds.module.db_instance.aws_db_instance.this",
            "module.rds.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rds.module.db_instance.data.aws_partition.current",
            "module.rds.module.db_instance.random_id.snapshot_identifier",
            "module.vpc.aws_vpc.this",
            "aws_security_group.db_sg",
            "module.alb.aws_security_group_rule.egress",
            "module.ecs-fargate.aws_lb_target_group.task",
            "module.rds.module.db_instance.aws_iam_role_policy_attachment.enhanced_monitoring",
            "module.rds.random_password.master_password",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.frontend_http_to_https_redirect",
            "module.alb.aws_security_group.main",
            "module.rds.module.db_parameter_group.aws_db_parameter_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.alb.aws_security_group_rule.allow_port_443_ingress_for_http_to_https_redirect",
            "module.rds.module.db_instance.aws_db_instance.this_mssql",
            "module.rds.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rds.module.db_option_group.aws_db_option_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942112512222:security-group/sg-0427752e3c540d6f1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0427752e3c540d6f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "148.63.196.120/32"
                ],
                "description": "allow hugo to ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "942112512222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "demo",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fbfb30c5e8a80f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942112512222:security-group/sg-0e1507e7656d8c6df",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1507e7656d8c6df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone to connect",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "942112512222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "demo",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fbfb30c5e8a80f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "task_ingress_9000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9000,
            "id": "sgrule-3224669610",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c15bf9bd7cef0b7d",
            "self": false,
            "source_security_group_id": "sg-0c6600b35ab7653a5",
            "to_port": 9000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.module.db_parameter_group.aws_db_parameter_group.this",
            "module.rds.module.db_subnet_group.aws_db_subnet_group.this",
            "module.vpc.aws_subnet.private",
            "module.alb.aws_security_group_rule.allow_port_80_ingress_for_http_to_https_redirect",
            "module.rds.module.db_instance.aws_db_instance.this",
            "module.rds.module.db_instance.aws_iam_role_policy_attachment.enhanced_monitoring",
            "module.rds.module.db_instance.data.aws_partition.current",
            "module.rds.module.db_option_group.aws_db_option_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_subnet.public",
            "aws_security_group.db_sg",
            "module.alb.aws_lb_listener.frontend_http_to_https_redirect",
            "module.rds.module.db_instance.aws_db_instance.this_mssql",
            "module.rds.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rds.random_password.master_password",
            "data.aws_availability_zones.azs",
            "module.alb.aws_security_group.main",
            "module.alb.aws_security_group_rule.egress",
            "module.rds.module.db_instance.random_id.snapshot_identifier",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.alb.aws_lb.main",
            "module.alb.aws_security_group_rule.allow_port_443_ingress_for_http_to_https_redirect",
            "module.ecs-fargate.aws_security_group.ecs_service",
            "module.rds.module.db_instance.aws_iam_role.enhanced_monitoring"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:942112512222:loadbalancer/app/restaurant-alb/e16234569991df9d",
            "arn_suffix": "app/restaurant-alb/e16234569991df9d",
            "dns_name": "restaurant-alb-924740886.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:942112512222:loadbalancer/app/restaurant-alb/e16234569991df9d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "restaurant-alb",
            "security_groups": [
              "sg-0c6600b35ab7653a5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-056e1ceec6ab4372b"
              },
              {
                "subnet_id": "subnet-0bab31b667933f13e"
              },
              {
                "subnet_id": "subnet-0fe927ee5c497e092"
              }
            ],
            "subnets": [
              "subnet-056e1ceec6ab4372b",
              "subnet-0bab31b667933f13e",
              "subnet-0fe927ee5c497e092"
            ],
            "tags": {
              "Name": "restaurant-alb"
            },
            "tags_all": {
              "Name": "restaurant-alb"
            },
            "timeouts": {
              "create": "15m",
              "delete": "15m",
              "update": "15m"
            },
            "vpc_id": "vpc-05fbfb30c5e8a80f5",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.alb.aws_security_group.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942112512222:security-group/sg-0c6600b35ab7653a5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6600b35ab7653a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All IPV4 ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "restaurant-alb-sg-20210613161005907200000001",
            "name_prefix": "restaurant-alb-sg-",
            "owner_id": "942112512222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "restaurant-alb-sg"
            },
            "tags_all": {
              "Name": "restaurant-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fbfb30c5e8a80f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-879389219",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c6600b35ab7653a5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.main",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08db015a4afd75546",
            "arn": "arn:aws:ec2:eu-central-1:942112512222:instance/i-0c485d41df53ace10",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c485d41df53ace10",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eu-central-1-restaurant",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eed83f79d30bee5e",
            "private_dns": "ip-10-0-101-120.eu-central-1.compute.internal",
            "private_ip": "10.0.101.120",
            "public_dns": "ec2-18-159-62-18.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.159.62.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bb8b7e7187522c87",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe927ee5c497e092",
            "tags": {
              "Environment": "demo",
              "Name": "restaurant-bastion",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "restaurant-bastion",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "restaurant-bastion"
            },
            "vpc_security_group_ids": [
              "sg-0427752e3c540d6f1"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu_bastion_ami",
            "data.aws_availability_zones.azs",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_security_group.bastion_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "restaurant-tg",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:942112512222:targetgroup/restaurant-tg/49079256f72c3ac4",
            "arn_suffix": "targetgroup/restaurant-tg/49079256f72c3ac4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:942112512222:targetgroup/restaurant-tg/49079256f72c3ac4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "restaurant-tg",
            "port": 9000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "demo",
              "Name": "restaurant-tg",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "restaurant-tg",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "target_type": "ip",
            "vpc_id": "vpc-05fbfb30c5e8a80f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.azs",
            "module.alb.aws_security_group.main",
            "module.rds.module.db_instance.aws_db_instance.this",
            "module.rds.random_password.master_password",
            "module.vpc.aws_subnet.public",
            "module.rds.module.db_instance.random_id.snapshot_identifier",
            "module.rds.module.db_parameter_group.aws_db_parameter_group.this",
            "module.rds.module.db_subnet_group.aws_db_subnet_group.this",
            "module.alb.aws_lb_listener.frontend_http_to_https_redirect",
            "module.alb.aws_security_group_rule.allow_port_443_ingress_for_http_to_https_redirect",
            "module.alb.aws_security_group_rule.allow_port_80_ingress_for_http_to_https_redirect",
            "module.rds.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rds.module.db_instance.aws_iam_role_policy_attachment.enhanced_monitoring",
            "module.alb.aws_security_group_rule.egress",
            "module.rds.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rds.module.db_instance.data.aws_partition.current",
            "module.rds.module.db_option_group.aws_db_option_group.this",
            "aws_security_group.db_sg",
            "module.alb.aws_lb.main",
            "module.rds.module.db_instance.aws_db_instance.this_mssql",
            "module.vpc.aws_subnet.private"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942112512222:security-group/sg-0c15bf9bd7cef0b7d",
            "description": "Fargate service security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c15bf9bd7cef0b7d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6600b35ab7653a5"
                ],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "restaurant-ecs-fargate-ecs-service-sg-20210613161005907300000002",
            "name_prefix": "restaurant-ecs-fargate-ecs-service-sg-",
            "owner_id": "942112512222",
            "revoke_rules_on_delete": true,
            "tags": {
              "Environment": "demo",
              "Name": "restaurant-ecs-fargate-ecs-service-sg",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "restaurant-ecs-fargate-ecs-service-sg",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fbfb30c5e8a80f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_security_group_rule.allow_port_443_ingress_for_http_to_https_redirect",
            "module.alb.aws_security_group_rule.allow_port_80_ingress_for_http_to_https_redirect",
            "module.rds.module.db_instance.aws_db_instance.this_mssql",
            "module.rds.random_password.master_password",
            "module.vpc.aws_subnet.private",
            "module.rds.module.db_instance.data.aws_partition.current",
            "module.rds.module.db_option_group.aws_db_option_group.this",
            "module.vpc.aws_vpc.this",
            "module.rds.module.db_instance.aws_db_instance.this",
            "module.rds.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rds.module.db_instance.aws_iam_role_policy_attachment.enhanced_monitoring",
            "module.rds.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rds.module.db_instance.random_id.snapshot_identifier",
            "module.rds.module.db_parameter_group.aws_db_parameter_group.this",
            "module.vpc.aws_subnet.public",
            "aws_security_group.db_sg",
            "data.aws_availability_zones.azs",
            "module.alb.aws_lb_listener.frontend_http_to_https_redirect",
            "module.alb.aws_security_group.main",
            "module.alb.aws_security_group_rule.egress",
            "module.rds.module.db_subnet_group.aws_db_subnet_group.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3663871207",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c15bf9bd7cef0b7d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.ecs-fargate.aws_security_group.ecs_service",
            "module.rds.module.db_instance.data.aws_partition.current",
            "module.rds.random_password.master_password",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "data.aws_availability_zones.azs",
            "module.alb.aws_security_group_rule.egress",
            "module.rds.module.db_instance.aws_db_instance.this",
            "module.rds.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rds.module.db_instance.aws_iam_role_policy_attachment.enhanced_monitoring",
            "module.rds.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.alb.aws_security_group_rule.allow_port_80_ingress_for_http_to_https_redirect",
            "module.rds.module.db_instance.random_id.snapshot_identifier",
            "module.rds.module.db_subnet_group.aws_db_subnet_group.this",
            "module.alb.aws_security_group.main",
            "module.alb.aws_lb_listener.frontend_http_to_https_redirect",
            "module.alb.aws_security_group_rule.allow_port_443_ingress_for_http_to_https_redirect",
            "module.rds.module.db_instance.aws_db_instance.this_mssql",
            "module.rds.module.db_option_group.aws_db_option_group.this",
            "module.rds.module.db_parameter_group.aws_db_parameter_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_security_group.db_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1950579849",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c6600b35ab7653a5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "module.alb.aws_security_group.main",
            "module.security_group.aws_security_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All IPV4 ICMP",
            "from_port": -1,
            "id": "sgrule-2421009434",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0c6600b35ab7653a5",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.main",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-051f07e63ec90414e",
            "domain": "vpc",
            "id": "eipalloc-af95e893",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-07789b95c661390b1",
            "private_dns": "ip-10-0-101-209.eu-central-1.compute.internal",
            "private_ip": "10.0.101.209",
            "public_dns": "ec2-3-67-241-38.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.67.241.38",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "demo",
              "Name": "restaurant-vpc-eu-central-1a",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "restaurant-vpc-eu-central-1a",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942112512222:internet-gateway/igw-0af84c1f640a12352",
            "id": "igw-0af84c1f640a12352",
            "owner_id": "942112512222",
            "tags": {
              "Environment": "demo",
              "Name": "restaurant-vpc",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "restaurant-vpc",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "vpc_id": "vpc-05fbfb30c5e8a80f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-af95e893",
            "connectivity_type": "public",
            "id": "nat-021ad2274175c89f1",
            "network_interface_id": "eni-07789b95c661390b1",
            "private_ip": "10.0.101.209",
            "public_ip": "3.67.241.38",
            "subnet_id": "subnet-0fe927ee5c497e092",
            "tags": {
              "Environment": "demo",
              "Name": "restaurant-vpc-eu-central-1a",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "restaurant-vpc-eu-central-1a",
              "Owner": "hugo",
              "Service": "restaurant"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a19e531adf5a18341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-021ad2274175c89f1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a19e531adf5a1834",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0af84c1f640a12352",
            "id": "r-rtb-00cb58f9b601d63201080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00cb58f9b601d6320",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942112512222:route-table/rtb-0a19e531adf5a1834",
            "id": "rtb-0a19e531adf5a1834",
            "owner_id": "942112512222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-021ad2274175c89f1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demo",
              "Name": "restaurant-vpc-private",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "restaurant-vpc-private",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "vpc_id": "vpc-05fbfb30c5e8a80f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942112512222:route-table/rtb-00cb58f9b601d6320",
            "id": "rtb-00cb58f9b601d6320",
            "owner_id": "942112512222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af84c1f640a12352",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demo",
              "Name": "restaurant-vpc-public",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "restaurant-vpc-public",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "vpc_id": "vpc-05fbfb30c5e8a80f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b59eca8f563dfea3",
            "route_table_id": "rtb-0a19e531adf5a1834",
            "subnet_id": "subnet-0ca30be645b6c31ee"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03707d6f3c6d05428",
            "route_table_id": "rtb-0a19e531adf5a1834",
            "subnet_id": "subnet-025668174d71539ee"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0289664b0ac780c72",
            "route_table_id": "rtb-0a19e531adf5a1834",
            "subnet_id": "subnet-0bd4ab57c1b12175c"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cd825859dd2b147",
            "route_table_id": "rtb-00cb58f9b601d6320",
            "subnet_id": "subnet-0fe927ee5c497e092"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b50b44e620a8e8bc",
            "route_table_id": "rtb-00cb58f9b601d6320",
            "subnet_id": "subnet-0bab31b667933f13e"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0319153b1c7b6c533",
            "route_table_id": "rtb-00cb58f9b601d6320",
            "subnet_id": "subnet-056e1ceec6ab4372b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942112512222:subnet/subnet-0ca30be645b6c31ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ca30be645b6c31ee",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942112512222",
            "tags": {
              "Environment": "demo",
              "Name": "restaurant-vpc-private-eu-central-1a",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "restaurant-vpc-private-eu-central-1a",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "vpc_id": "vpc-05fbfb30c5e8a80f5"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942112512222:subnet/subnet-025668174d71539ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-025668174d71539ee",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942112512222",
            "tags": {
              "Environment": "demo",
              "Name": "restaurant-vpc-private-eu-central-1b",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "restaurant-vpc-private-eu-central-1b",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "vpc_id": "vpc-05fbfb30c5e8a80f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942112512222:subnet/subnet-0bd4ab57c1b12175c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0bd4ab57c1b12175c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942112512222",
            "tags": {
              "Environment": "demo",
              "Name": "restaurant-vpc-private-eu-central-1c",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "restaurant-vpc-private-eu-central-1c",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "vpc_id": "vpc-05fbfb30c5e8a80f5"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942112512222:subnet/subnet-0fe927ee5c497e092",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0fe927ee5c497e092",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "942112512222",
            "tags": {
              "Environment": "demo",
              "Name": "restaurant-vpc-public-eu-central-1a",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "restaurant-vpc-public-eu-central-1a",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "vpc_id": "vpc-05fbfb30c5e8a80f5"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942112512222:subnet/subnet-0bab31b667933f13e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0bab31b667933f13e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "942112512222",
            "tags": {
              "Environment": "demo",
              "Name": "restaurant-vpc-public-eu-central-1b",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "restaurant-vpc-public-eu-central-1b",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "vpc_id": "vpc-05fbfb30c5e8a80f5"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942112512222:subnet/subnet-056e1ceec6ab4372b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-056e1ceec6ab4372b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "942112512222",
            "tags": {
              "Environment": "demo",
              "Name": "restaurant-vpc-public-eu-central-1c",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "restaurant-vpc-public-eu-central-1c",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "vpc_id": "vpc-05fbfb30c5e8a80f5"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942112512222:vpc/vpc-05fbfb30c5e8a80f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c944f22cf84de9e4",
            "default_route_table_id": "rtb-033b0552dc66b0a49",
            "default_security_group_id": "sg-01996b776576bf96e",
            "dhcp_options_id": "dopt-e0a33a8a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05fbfb30c5e8a80f5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-033b0552dc66b0a49",
            "owner_id": "942112512222",
            "tags": {
              "Environment": "demo",
              "Name": "restaurant-vpc",
              "Owner": "hugo",
              "Service": "restaurant"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "restaurant-vpc",
              "Owner": "hugo",
              "Service": "restaurant"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}